...
        android:text="@string/menu_desc"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/courses"
        android:layout_width="match_parent"
        android:layout_height="564dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:choiceMode="multipleChoice" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
...
