...
        android:textAlignment="viewStart"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/energyBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="162dp"
        android:layout_height="23dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:indeterminate="false"
...
